--- a/src/main/webapp/src/manager/views/dashboard/index.xhtml
+++ b/src/main/webapp/src/manager/views/dashboard/index.xhtml
@@ -5,17 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <title>my pack</title>
-<!--    <h:outputScript library="primefaces" name="js/axios.js" target="head" />-->
-</h:head>
-<body>
-    <f:view>
-        <h:outputLabel id="output" value="Hello, world !"/>
-        <button>click here</button>
-    </f:view>
-    <script type="">
-
-    </script>
-</body>
+<f:view>
+    <h:outputLabel value="Hello, world"/>
+</f:view>
 </html>
