--- a/src/main/webapp/src/admin/component/sidebar.xhtml
+++ b/src/main/webapp/src/admin/component/sidebar.xhtml
@@ -5,7 +5,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<h:head>
+    <title>dashboard</title>
+</h:head>
+<h:body>
+    <h:outputLabel id="output" value="is sidebar component"/>
+</h:body>
 </html>
