--- a/src/main/webapp/src/admin/component/header.xhtml
+++ b/src/main/webapp/src/admin/component/header.xhtml
@@ -1,10 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
 <h:head>
     <title>dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -31,8 +29,9 @@
     </style>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
+
 </h:head>
 <h:body>
-    <h:outputLabel styleClass="text-red-600" id="output" value="is headre component"/>
+    <p:spinner />
 </h:body>
 </html>
