--- a/src/main/webapp/src/admin/component/sidebar.xhtml
+++ b/src/main/webapp/src/admin/component/sidebar.xhtml
@@ -11,7 +11,7 @@
 <h:body>
     <div class="mr-6">
          <div class="flex justify-center">
-             <h:graphicImage width="100" height="80" value="./assets/images/logo.png"></h:graphicImage>
+             <h:graphicImage width="100" height="80" value="/assets/images/logo.png"></h:graphicImage>
          </div>
         <div class="mt-8">
             <ul class="w-full flex flex-col justify-start pl-6">
