--- a/src/main/webapp/src/admin/views/dashboard/index.xhtml
+++ b/src/main/webapp/src/admin/views/dashboard/index.xhtml
@@ -12,22 +12,40 @@
     <div class="w-full flex justify-between h-96">
         <div class="w-8/12 flex justify-around bg-white rounded-lg h-52">
            <div class="w-3/4 flex flex-col justify-center text-blue pl-4">
-               <h4 class="mb-2">Congratulations John! </h4>
-               <p class="mb-2">You have done 72% more sales today. Check</p>
-               <p class="mb-8">your new badge in your profile.</p>
-               <button class="w-36 text-xs px-2 py-1 rounded-lg text-blue-500 border border-blue-500">view all managers</button>
+               <h4 class="mb-2 text-[#696CFF] font-semibold">Congratulations John! </h4>
+               <p class="mb-2 text-[#697A8D]">You have done <span class="font-bold">72%</span> more sales today. Check</p>
+               <p class="mb-8 text-[#697A8D]">your new badge in your profile.</p>
+               <button class="w-36 text-xs px-2 py-1 rounded-lg text-[#696CFF] border border-[#696CFF]">view all managers</button>
            </div>
-           <h:graphicImage styleClass="w-64 h-48" value="./assets/images/delivery.png"></h:graphicImage>
+           <h:graphicImage styleClass="w-64 h-48" value="/assets/images/delivery.png"></h:graphicImage>
         </div>
-        <div class="w-40 flex flex-col justify-center item-center bg-white rounded-lg h-52">
-            <i class="pi pi-home text-center"></i>
-            <span class="mx-auto">230.00</span>
-            <span class="text-green-600 mx-auto">Drivers</span>
+        <div class="w-40 flex flex-col justify-around item-center bg-white rounded-lg h-52 pl-6">
+            <div class="flex justify-between pr-2">
+                 <i class="pi pi-users text-center text-[#72DD38] bg-[#EEFBE7] w-10 h-10 pt-1 rounded-lg pt-2" style="font-size: 20px;"></i>
+                 <i class="pi pi-ellipsis-v mt-1"></i>
+            </div>
+            <div class="flex flex-col">
+                <div class="flex">
+                    <span class="text-lg text-[#697A8D]">all our drivers</span>
+                </div>
+                <div class="flex">
+                    <span class="text-[#566A7F] text-lg font-bold">230.00 <span class="font-light	">drivers</span></span>
+                </div>
+            </div>
         </div>
-        <div class="w-40 flex flex-col justify-center item-center bg-white rounded-lg h-52">
-            <i class="pi pi-home text-center"></i>
-            <span class="mx-auto">230.00</span>
-            <span class="text-green-600 mx-auto">Drivers</span>
+        <div class="w-40 flex flex-col justify-around item-center bg-white rounded-lg h-52 pl-6">
+            <div class="flex justify-between pr-2">
+                <i class="pi pi-car text-center text-[#72DD38] bg-[#EEFBE7] w-10 h-10 pt-1 rounded-lg pt-2" style="font-size: 20px;"></i>
+                <i class="pi pi-ellipsis-v mt-1"></i>
+            </div>
+            <div class="flex flex-col">
+                <div class="flex">
+                    <span class="text-lg text-[#697A8D]">all our cars</span>
+                </div>
+                <div class="flex">
+                    <span class="text-[#566A7F] text-lg font-bold">230.00 <span class="font-light	">cars</span></span>
+                </div>
+            </div>
         </div>
     </div>
 </h:body>
