--- a/src/main/webapp/src/admin/views/dashboard/index.xhtml
+++ b/src/main/webapp/src/admin/views/dashboard/index.xhtml
@@ -17,7 +17,7 @@
                <p class="mb-8">your new badge in your profile.</p>
                <button class="w-36 text-xs px-2 py-1 rounded-lg text-blue-500 border border-blue-500">view all managers</button>
            </div>
-           <h:graphicImage styleClass="w-64 h-48" value="./assets/images/delivery.png"></h:graphicImage>
+           <h:graphicImage styleClass="w-64 h-48" value="/assets/images/delivery.png"></h:graphicImage>
         </div>
         <div class="w-40 flex flex-col justify-center item-center bg-white rounded-lg h-52">
             <i class="pi pi-home text-center"></i>
