--- a/src/main/webapp/src/admin/component/sidebar.xhtml
+++ b/src/main/webapp/src/admin/component/sidebar.xhtml
@@ -27,13 +27,17 @@
                             <h:commandLink action="managers" value="Manegers"></h:commandLink>
                     </h:form>
                 </li>
-                <li class="text-[#697A8D] font-medium mb-4">
+                <li class="flex text-[#697A8D] font-medium mb-4">
                     <i class="pi pi-user mr-2"></i>
-                    <a href="#">Drivers</a>
+                    <h:form>
+                        <h:commandLink action="drivers" value="Drivers"></h:commandLink>
+                    </h:form>
                 </li>
-                <li class="text-[#697A8D] font-medium mb-4">
+                <li class="flex text-[#697A8D] font-medium mb-4">
                     <i class="pi pi-car mr-2"></i>
-                    <a href="#">Cars</a>
+                    <h:form>
+                        <h:commandLink action="cars" value="Cars"></h:commandLink>
+                    </h:form>
                 </li>
             </ul>
         </div>
