--- a/src/main/webapp/src/admin/component/header.xhtml
+++ b/src/main/webapp/src/admin/component/header.xhtml
@@ -42,11 +42,11 @@
         </div>
         <div>
             <div class="flex items-center md:order-2 pt-2">
-                <span class="pr-4"><i class="pi pi-envelope" style="font-size: 20px"></i></span>
-                <span class="pr-4"><i class="pi pi-bell" style="font-size: 20px"></i></span>
+                <span class="pr-4 text-gray-500"><i class="pi pi-envelope text-[#f00]" style="font-size: 15px"></i></span>
+                <span class="pr-4 text-gray-500"><i class="pi pi-bell text-[#72DD38]" style="font-size: 15px"></i></span>
                 <button type="button" class="flex mr-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
                     <span class="sr-only">Open user menu</span>
-                    <img class="w-11 h-11 rounded-full" src="https://media.vanityfair.fr/photos/62d800c22604eb0f5b81e9a9/1:1/w_1365,h_1365,c_limit/ryan-gosling-the-gray-man.jpg" alt="user photo" />
+                    <img class="w-10 h-10 rounded-full" src="https://media.vanityfair.fr/photos/62d800c22604eb0f5b81e9a9/1:1/w_1365,h_1365,c_limit/ryan-gosling-the-gray-man.jpg" alt="user photo" />
                 </button>
                 <!-- Dropdown menu -->
                 <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
@@ -56,16 +56,17 @@
                     </div>
                     <ul class="py-1 pr-4" aria-labelledby="user-menu-button">
                         <li>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200"><i class="pi pi-home"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
+                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200"><i class="pi pi-cog"></i>  Settings</a>
                         </li>
                         <li>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Earnings</a>
+                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200"><i class="pi pi-spinner"></i> Earnings</a>
                         </li>
                         <li>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-sky-700 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
+                            <hr/>
+                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200"><i class="pi pi-power-off"></i> Sign out</a>
                         </li>
                     </ul>
                 </div>
