--- a/src/main/webapp/src/admin/component/sidebar.xhtml
+++ b/src/main/webapp/src/admin/component/sidebar.xhtml
@@ -14,24 +14,24 @@
              <h:graphicImage width="100" height="80" value="/assets/images/logo.png"></h:graphicImage>
          </div>
         <div class="mt-8">
-            <ul class="w-full flex flex-col justify-start pl-6">
-                <li class="text-[#697A8D] font-medium mb-4">
-                    <i class="pi pi-home mr-2"></i>
-                    <a href="#">Dashboard</a>
-                </li>
-                <li class="text-[#697A8D] font-medium mb-4">
-                    <i class="pi pi-users mr-2"></i>
-                    <a href="#">Managers</a>
-                </li>
-                <li class="text-[#697A8D] font-medium mb-4">
-                    <i class="pi pi-user mr-2"></i>
-                    <a href="#">Drivers</a>
-                </li>
-                <li class="text-[#697A8D] font-medium mb-4">
-                    <i class="pi pi-car mr-2"></i>
-                    <a href="#">Cars</a>
-                </li>
-            </ul>
+                <ul class="w-full flex flex-col justify-start pl-6">
+                    <li class="text-[#697A8D] font-medium mb-4">
+                        <i class="pi pi-home mr-2"></i>
+                        <a href="#">Dashboard</a>
+                    </li>
+                    <li class="text-[#697A8D] font-medium mb-4">
+                        <i class="pi pi-users mr-2"></i>
+                        <a href="#">Manager</a>
+                    </li>
+                    <li class="text-[#697A8D] font-medium mb-4">
+                        <i class="pi pi-user mr-2"></i>
+                        <a href="#">Drivers</a>
+                    </li>
+                    <li class="text-[#697A8D] font-medium mb-4">
+                        <i class="pi pi-car mr-2"></i>
+                        <a href="#">Cars</a>
+                    </li>
+                </ul>
         </div>
     </div>
 </h:body>
